src/components/Instance.css
/* ... */
.kgs-instance-scroll {
    flex: 1;
    width: 100%;
    height: 100%;
    overflow-y: auto;
}

.kgs-instance .kgs-notice .kgs-notice-agree-button {
    right: var(--site-margin);
}

.kgs-instance-content {
    position: relative;
    padding: 35px;
}

.kgs-instance__header  {
    position: relative;
    width: 100%;
    background-color: var(--color-30);
    background-image: url('data:image/svg+xml;utf8,<svg xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns%23" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns%23" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" width="210.91064mm" height="99.02961mm" viewBox="0 0 210.91064 99.029609" version="1.1" id="svg8" inkscape:version="0.92.3 (2405546, 2018-03-11)" sodipodi:docname="bgr.svg"><defs id="defs2"><linearGradient id="linearGradient937" inkscape:collect="always"><stop id="stop933" offset="0" style="stop-color:%23fecd07;stop-opacity:1" /><stop id="stop935" offset="1" style="stop-color:%23f88900;stop-opacity:0" /></linearGradient><linearGradient inkscape:collect="always" id="linearGradient835"><stop style="stop-color:%23ef544f;stop-opacity:1" offset="0" id="stop831" /><stop style="stop-color:%23e01a14;stop-opacity:0;" offset="1" id="stop833" /></linearGradient><radialGradient inkscape:collect="always" xlink:href="%23linearGradient937" id="radialGradient825" cx="26.080359" cy="98.940468" fx="26.080359" fy="98.940468" r="126.62202" gradientTransform="matrix(1.0193498,-0.28235447,0.26074741,0.94134451,-17.685259,34.560761)" gradientUnits="userSpaceOnUse" /><radialGradient inkscape:collect="always" xlink:href="%23linearGradient835" id="radialGradient837" cx="169.33333" cy="116.32738" fx="169.33333" fy="116.32738" r="116.41666" gradientTransform="matrix(1.0644025,0.03263568,-0.048782,1.5910094,-4.4748578,-75.032837)" gradientUnits="userSpaceOnUse" /><clipPath clipPathUnits="userSpaceOnUse" id="clipPath927"><rect style="opacity:1;fill:%23ef544f;fill-opacity:1;stroke:%23fbcb3e;stroke-width:0;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" id="rect929" width="210.91064" height="99.02961" x="0" y="-0.089400224" /></clipPath><radialGradient inkscape:collect="always" xlink:href="%23linearGradient937" id="radialGradient931" gradientUnits="userSpaceOnUse" gradientTransform="matrix(1.0644025,0.03263568,-0.048782,1.5910094,42.09183,-86.145344)" cx="169.33333" cy="116.32738" fx="169.33333" fy="116.32738" r="116.41666" /></defs><sodipodi:namedview id="base" pagecolor="%23ffffff" bordercolor="%23666666" borderopacity="1.0" inkscape:pageopacity="0.0" inkscape:pageshadow="2" inkscape:zoom="0.35" inkscape:cx="417.14233" inkscape:cy="-188.57243" inkscape:document-units="mm" inkscape:current-layer="g921" showgrid="false" inkscape:window-width="1853" inkscape:window-height="1144" inkscape:window-x="67" inkscape:window-y="28" inkscape:window-maximized="1" fit-margin-top="0" fit-margin-left="0" fit-margin-right="0" fit-margin-bottom="0" /><metadata id="metadata5"><rdf:RDF><cc:Work rdf:about=""><dc:format>image/svg+xml</dc:format><dc:type rdf:resource="http://purl.org/dc/dcmitype/StillImage" /><dc:title /></cc:Work></rdf:RDF></metadata><g inkscape:label="Layer 1" inkscape:groupmode="layer" id="layer1" transform="translate(0,0.08940022)"><ellipse style="opacity:1;fill:%23eb241f;fill-opacity:0;stroke:%23fbcb3e;stroke-width:0;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" id="path827" cx="221.87201" cy="103.85416" rx="75.217262" ry="49.514877" /><g id="g921" clip-path="url(%23clipPath927)"><path id="rect815" transform="scale(0.26458333)" d="M 0,-0.33789062 V 373.94727 H 797.14258 V -0.33789062 Z" style="opacity:1;fill:%23fecd07;fill-opacity:1;stroke-width:0;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" inkscape:connector-curvature="0" /><ellipse ry="93.738091" rx="126.62202" cy="107.48272" cx="35.454178" id="path817" style="opacity:1;fill:url(%23radialGradient825);fill-opacity:1;stroke:%23fbcb3e;stroke-width:0;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" /><ellipse ry="109.61309" rx="116.41666" cy="104.45895" cx="216.6553" id="path829" style="opacity:1;fill:url(%23radialGradient931);fill-opacity:1.0;stroke:%23fbcb3e;stroke-width:0;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" /></g><ellipse style="opacity:1;fill:%23ef544f;fill-opacity:1;stroke:%23fbcb3e;stroke-width:0;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" id="path839" cx="-13.229166" cy="167.35417" rx="0.37797621" ry="1.8898809" /></g></svg>');
    background-size: cover;
}

.kgs-instance__header_fields {
    padding: 0 35px 15px 35px;
}

.kgs-instance__header_fields .label{
    margin-right: 10px;
}

.kgs-instance__header h3.kgs-instance__group {
    display: none;
    margin-top: 0;
    font-weight: bold;
    font-size: var(--font-size-small);
    line-height: 24px;
}

.kgs-instance__header h3.kgs-instance__group.show {
    display: block;
}

.kgs-instance__header h3.kgs-instance__group strong {
    font-size: 24px;
    font-weight: normal;
    text-transform: capitalize;
    vertical-align: text-bottom;
    display: inline-block;
    transform: translateY(1px);
}

.kgs-instance__previews > div {
    display: inline-block;
    width: 300px;
}

@media (min-width: 400px) {
    .kgs-instance__previews > div {
        width: 340px;
        border: 1px solid var(--border-color-3);
        padding: 20px;
    }
    .kgs-instance__previews.has-many > div {
        padding: 20px 20px 10px 20px;
    }
}
/* ... */

